# serverless-decision-log-mcp-server

./: .gitignore  Cargo.toml  README.md  spin.toml
src/: decision.rs  lib.rs
wit/: deps.toml  world.wit
