[package]
name = "decision_log_mcp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Empty workspace table prevents this package from inheriting
# a parent workspace when created inside another workspace
[workspace]

[dependencies]
wit-bindgen = "0.46"
serde_json = "1.0"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
spin-sdk = "5.1.1"
